--- a/Artefakte/RapidPrototypes/React-three-js/package.json
+++ b/Artefakte/RapidPrototypes/React-three-js/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-glsl": "^1.0.0",
     "glsl-noise": "0.0.0",
     "glslify": "^7.1.1",
+    "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
