--- a/Artefakte/RapidPrototypes/React-three-js/package.json
+++ b/Artefakte/RapidPrototypes/React-three-js/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.147.0",
+    "valtio": "^1.8.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
