--- a/Artefakte/FunktionalerPrototyp/package.json
+++ b/Artefakte/FunktionalerPrototyp/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-three/drei": "^9.47.1",
     "@react-three/fiber": "^8.9.1",
     "@react-three/postprocessing": "^2.7.0",
